@@ -6,6 +6,8 @@ UNRELEASED CHANGES
 
   * Clarified NFS support in documentation.
 
+  * contrib/clone_fs.py is now working again.
+
 2018-06-14, S3QL 2.28
 
   * Fixed upgrade process for unencrypted filesystems (was broken in
